1) MutlSelect 기능 추가 - ContactRegister, SessionRegister

--- a/src/VoIPClient/VoIPClient.rc
+++ b/src/VoIPClient/VoIPClient.rc
@@ -504,8 +504,8 @@ FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
     DEFPUSHBUTTON   "Create",IDOK,287,193,50,14
     PUSHBUTTON      "취소",IDCANCEL,338,193,50,14
-    CONTROL         "",IDC_LT_CONTACT,"SysListView32",LVS_REPORT | LVS_ALIGNLEFT | WS_BORDER | WS_TABSTOP,7,66,175,103
-    CONTROL         "",IDC_LT_PARTICIPANTS,"SysListView32",LVS_REPORT | LVS_ALIGNLEFT | WS_BORDER | WS_TABSTOP,213,66,175,102
+    CONTROL         "",IDC_LT_CONTACT,"SysListView32",LVS_REPORT | LVS_SORTASCENDING | LVS_ALIGNLEFT | WS_BORDER | WS_TABSTOP,7,66,175,103
+    CONTROL         "",IDC_LT_PARTICIPANTS,"SysListView32",LVS_REPORT | LVS_SORTASCENDING | LVS_ALIGNLEFT | WS_BORDER | WS_TABSTOP,213,66,175,102
     CONTROL         "",IDC_DP_DATE,"SysDateTimePick32",DTS_RIGHTALIGN | WS_TABSTOP,7,22,93,15
     LTEXT           "Contact List",IDC_STATIC,7,50,118,8
     LTEXT           "Participants",IDC_STATIC,215,50,118,8
@@ -527,7 +527,7 @@ BEGIN
     PUSHBUTTON      "취소",IDCANCEL,252,155,50,14
     EDITTEXT        IDC_ED_SEARCH_NAME,7,7,182,17,ES_AUTOHSCROLL
     CONTROL         "Search",IDC_MFCBTN_SEARCH,"MfcButton",WS_TABSTOP,199,7,103,18
-    CONTROL         "",IDC_LT_CONTACT_NAMES,"SysListView32",LVS_REPORT | LVS_ALIGNLEFT | WS_BORDER | WS_TABSTOP,7,28,182,141
+    CONTROL         "",IDC_LT_CONTACT_NAMES,"SysListView32",LVS_REPORT | LVS_SORTASCENDING | LVS_ALIGNLEFT | WS_BORDER | WS_TABSTOP,7,28,182,141
 END
 
 IDD_RESET_PASSWORD DIALOGEX 0, 0, 267, 177
