1) ClientView CheckBox  추가

--- a/src/VoIPClient/VoIPClient.rc
+++ b/src/VoIPClient/VoIPClient.rc
@@ -437,14 +437,14 @@ STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | WS_SYSM
 CAPTION "Sign-In"
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
+    CONTROL         "Create",IDC_MFCBTN_CREATE_SI,"MfcButton",WS_TABSTOP,68,171,49,44
+    CONTROL         "Cancel",IDC_MFCBTN_CANCEL_SI,"MfcButton",WS_TABSTOP,144,171,49,44
     EDITTEXT        IDC_ED_ACCOUNT_ID,73,25,150,17,ES_AUTOHSCROLL
     EDITTEXT        IDC_ED_PASSWORD,73,48,150,17,ES_AUTOHSCROLL
     EDITTEXT        IDC_ED_EMAIL,73,71,150,17,ES_AUTOHSCROLL
     EDITTEXT        IDC_ED_LAST_NAME,73,95,150,17,ES_AUTOHSCROLL
     COMBOBOX        IDC_COMBO_PASSWORD_QUESTION,73,121,150,24,CBS_DROPDOWN | CBS_SORT | WS_VSCROLL | WS_TABSTOP
     EDITTEXT        IDC_ED_PASSWORD_ANSWER,73,142,150,17,ES_AUTOHSCROLL
-    CONTROL         "",IDC_MFCBTN_CREATE,"MfcButton",WS_TABSTOP,68,171,49,44
-    CONTROL         "",IDC_MFCBTN_CANCEL,"MfcButton",WS_TABSTOP,144,171,49,44
     LTEXT           "ID",IDC_STATIC,29,25,8,8
     LTEXT           "Password",IDC_STATIC,29,52,32,8
     LTEXT           "Email",IDC_STATIC,29,76,17,8
@@ -600,9 +600,11 @@ STYLE DS_SETFONT | DS_FIXEDSYS | WS_CHILD | WS_SYSMENU
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
     CONTROL         "",IDC_MFCBTN_CONNECT,"MfcButton",WS_TABSTOP,7,7,25,23
-    CONTROL         "",IDC_MFC_VAD,"MfcButton",WS_TABSTOP,7,40,25,23
-    CONTROL         "",IDC_MFC_ECHO,"MfcButton",WS_TABSTOP,7,63,25,23
+    CONTROL         "",IDC_MFC_VAD,"MfcButton",WS_DISABLED | WS_TABSTOP,7,70,25,23
+    CONTROL         "",IDC_MFC_ECHO,"MfcButton",WS_DISABLED | WS_TABSTOP,7,94,25,23
     CONTROL         IDB_BITMAP1,IDC_IMAGE_VIEW,"Static",SS_BITMAP | SS_CENTERIMAGE | SS_RIGHTJUST | SS_REALSIZEIMAGE,42,7,524,348,WS_EX_ACCEPTFILES
+    CONTROL         "Echo",IDC_CHECK_ECHO,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,7,50,31,16
+    CONTROL         "VAD",IDC_CHECK_VAD,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,7,34,35,16
 END
 
 
@@ -936,7 +938,7 @@ END
 
 IDD_DLG_MANAGE_ACCOUNT DLGINIT
 BEGIN
-    IDC_MFCBTN_CREATE, 0x37c, 462, 0
+    IDC_MFCBTN_CREATE_SI, 0x37c, 459, 0
 0x4d3c, 0x4346, 0x7542, 0x7474, 0x6e6f, 0x535f, 0x7974, 0x656c, 0x363e, 
 0x2f3c, 0x464d, 0x4243, 0x7475, 0x6f74, 0x5f6e, 0x7453, 0x6c79, 0x3e65, 
 0x4d3c, 0x4346, 0x7542, 0x7474, 0x6e6f, 0x415f, 0x7475, 0x736f, 0x7a69, 
@@ -952,18 +954,18 @@ BEGIN
 0x7954, 0x6570, 0x3c3e, 0x464d, 0x4243, 0x7475, 0x6f74, 0x5f6e, 0x6d49, 
 0x6761, 0x5465, 0x7079, 0x3e65, 0x3031, 0x2f3c, 0x464d, 0x4243, 0x7475, 
 0x6f74, 0x5f6e, 0x6d49, 0x6761, 0x5465, 0x7079, 0x3e65, 0x4d3c, 0x4346, 
-0x7542, 0x7474, 0x6e6f, 0x495f, 0x616d, 0x6567, 0x4449, 0x333e, 0x3439, 
+0x7542, 0x7474, 0x6e6f, 0x495f, 0x616d, 0x6567, 0x4449, 0x333e, 0x3438, 
 0x2f3c, 0x464d, 0x4243, 0x7475, 0x6f74, 0x5f6e, 0x6d49, 0x6761, 0x4965, 
 0x3e44, 0x4d3c, 0x4346, 0x7542, 0x7474, 0x6e6f, 0x495f, 0x616d, 0x6567, 
-0x493e, 0x4244, 0x415f, 0x4444, 0x555f, 0x4553, 0x5f52, 0x3036, 0x2f3c, 
-0x464d, 0x4243, 0x7475, 0x6f74, 0x5f6e, 0x6d49, 0x6761, 0x3e65, 0x4d3c, 
-0x4346, 0x7542, 0x7474, 0x6e6f, 0x495f, 0x616d, 0x6567, 0x6e4f, 0x6f54, 
-0x3e70, 0x4146, 0x534c, 0x3c45, 0x4d2f, 0x4346, 0x7542, 0x7474, 0x6e6f, 
-0x495f, 0x616d, 0x6567, 0x6e4f, 0x6f54, 0x3e70, 0x4d3c, 0x4346, 0x7542, 
-0x7474, 0x6e6f, 0x495f, 0x616d, 0x6567, 0x6e4f, 0x6952, 0x6867, 0x3e74, 
-0x4146, 0x534c, 0x3c45, 0x4d2f, 0x4346, 0x7542, 0x7474, 0x6e6f, 0x495f, 
-0x616d, 0x6567, 0x6e4f, 0x6952, 0x6867, 0x3e74, 
-    IDC_MFCBTN_CANCEL, 0x37c, 460, 0
+0x493e, 0x4244, 0x415f, 0x4444, 0x555f, 0x4553, 0x3c52, 0x4d2f, 0x4346, 
+0x7542, 0x7474, 0x6e6f, 0x495f, 0x616d, 0x6567, 0x3c3e, 0x464d, 0x4243, 
+0x7475, 0x6f74, 0x5f6e, 0x6d49, 0x6761, 0x4f65, 0x546e, 0x706f, 0x463e, 
+0x4c41, 0x4553, 0x2f3c, 0x464d, 0x4243, 0x7475, 0x6f74, 0x5f6e, 0x6d49, 
+0x6761, 0x4f65, 0x546e, 0x706f, 0x3c3e, 0x464d, 0x4243, 0x7475, 0x6f74, 
+0x5f6e, 0x6d49, 0x6761, 0x4f65, 0x526e, 0x6769, 0x7468, 0x463e, 0x4c41, 
+0x4553, 0x2f3c, 0x464d, 0x4243, 0x7475, 0x6f74, 0x5f6e, 0x6d49, 0x6761, 
+0x4f65, 0x526e, 0x6769, 0x7468, "\076" 
+    IDC_MFCBTN_CANCEL_SI, 0x37c, 460, 0
 0x4d3c, 0x4346, 0x7542, 0x7474, 0x6e6f, 0x535f, 0x7974, 0x656c, 0x363e, 
 0x2f3c, 0x464d, 0x4243, 0x7475, 0x6f74, 0x5f6e, 0x7453, 0x6c79, 0x3e65, 
 0x4d3c, 0x4346, 0x7542, 0x7474, 0x6e6f, 0x415f, 0x7475, 0x736f, 0x7a69, 
@@ -979,10 +981,10 @@ BEGIN
 0x7954, 0x6570, 0x3c3e, 0x464d, 0x4243, 0x7475, 0x6f74, 0x5f6e, 0x6d49, 
 0x6761, 0x5465, 0x7079, 0x3e65, 0x3031, 0x2f3c, 0x464d, 0x4243, 0x7475, 
 0x6f74, 0x5f6e, 0x6d49, 0x6761, 0x5465, 0x7079, 0x3e65, 0x4d3c, 0x4346, 
-0x7542, 0x7474, 0x6e6f, 0x495f, 0x616d, 0x6567, 0x4449, 0x333e, 0x3838, 
+0x7542, 0x7474, 0x6e6f, 0x495f, 0x616d, 0x6567, 0x4449, 0x333e, 0x3738, 
 0x2f3c, 0x464d, 0x4243, 0x7475, 0x6f74, 0x5f6e, 0x6d49, 0x6761, 0x4965, 
 0x3e44, 0x4d3c, 0x4346, 0x7542, 0x7474, 0x6e6f, 0x495f, 0x616d, 0x6567, 
-0x493e, 0x4244, 0x435f, 0x4e41, 0x4543, 0x5f4c, 0x3036, 0x2f3c, 0x464d, 
+0x493e, 0x4244, 0x435f, 0x4e41, 0x4543, 0x5f4c, 0x3033, 0x2f3c, 0x464d, 
 0x4243, 0x7475, 0x6f74, 0x5f6e, 0x6d49, 0x6761, 0x3e65, 0x4d3c, 0x4346, 
 0x7542, 0x7474, 0x6e6f, 0x495f, 0x616d, 0x6567, 0x6e4f, 0x6f54, 0x3e70, 
 0x4146, 0x534c, 0x3c45, 0x4d2f, 0x4346, 0x7542, 0x7474, 0x6e6f, 0x495f, 
