--- a/src/VoIPClient/VoIPClient.rc
+++ b/src/VoIPClient/VoIPClient.rc
@@ -605,7 +605,7 @@ BEGIN
     CONTROL         IDB_BITMAP1,IDC_IMAGE_VIEW,"Static",SS_BITMAP | SS_CENTERIMAGE | SS_RIGHTJUST | SS_REALSIZEIMAGE,42,7,524,348,WS_EX_ACCEPTFILES
     CONTROL         "Echo",IDC_CHECK_ECHO,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,7,50,31,16
     CONTROL         "VAD",IDC_CHECK_VAD,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,7,34,35,16
-    CONTROL         "",IDC_MFC_ECHO2,"MfcButton",WS_DISABLED | WS_TABSTOP,7,332,25,23
+    CONTROL         "",IDC_MFC_ECHO2,"MfcButton",WS_TABSTOP,7,332,25,23
 END
 
 
